<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/nav_map_1"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_points"
            android:icon="@drawable/nav_points_2"
            android:title="@string/Interestpoints" />
        <item
            android:id="@+id/nav_ways"
            android:icon="@drawable/nav_ways_3"
            android:title="@string/Ways" />



    <item android:title="">
    <menu>
        <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_whoarewe"
            android:icon="@drawable/nav_whoarewe_4"
            android:title="@string/whoarewe" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/nav_contactus_5"
            android:title="@string/contactus" />
        <item
            android:id="@+id/nav_privacypolicy"
            android:icon="@drawable/nav_privacy_6"
            android:title="@string/privacypolicy" />
        </group>
    </menu>
    </item>
</group>

</menu>
